@@ -77,6 +77,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #10684: shutil.move used to delete a folder on case insensitive
+  filesystems when the source and destination name where the same except
+  for the case.
+
 - Issue #11982: fix json.loads('""') to return u'' rather than ''.
 
 - Issue #11277: mmap.mmap() calls fcntl(fd, F_FULLFSYNC) on Mac OS X to get
